--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Project</title>
+	<title>PTT Business Software Co.Ltd</title>
 
 	<!-- icon -->
 	<link href="https://icon-library.com/images/icon-logo-png/icon-logo-png-11.jpg" rel="icon" type="image/jpg" />
@@ -118,7 +118,7 @@
 
 	<!-- Start Client Section -->
 
-			<section class="bg-light p-4">
+			<section id="" class="bg-light p-4">
 				<div class="container-fluid">
 					<!-- Start title -->
 						<div class="col-12 text-center">
